подправил ДЗ